// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`MarkerTable EmptyReasons shows reasons when a profile has no non-network markers 1`] = `
<div
  class="EmptyReasons"
>
  <h3>
    The 
    marker table
     is empty for “
    Empty
    ”
  </h3>
  <p>
    This thread contains no markers for this table.
  </p>
</div>
`;

exports[`MarkerTable EmptyReasons shows reasons when all non-network markers have been filtered out 1`] = `
<div
  class="EmptyReasons"
>
  <h3>
    The 
    marker table
     is empty for “
    Empty
    ”
  </h3>
  <p>
    All markers were filtered out by the current selection or search term.
  </p>
</div>
`;

exports[`MarkerTable renders some basic markers and updates when needed 1`] = `
<div
  aria-labelledby="marker-table-tab-button"
  class="markerTable"
  id="marker-table-tab"
  role="tabpanel"
>
  <div
    class="markerSettings"
  >
    <ul
      class="panelSettingsList"
    >
      <li
        class="panelSettingsListItem"
      >
        <span
          class="stackImplementationSettingLabel"
        >
          Filter stacks:
        </span>
        <input
          checked=""
          class="photon-radio photon-radio-micro"
          id="implementation-radio-combined"
          title="Do not filter the stack frames"
          type="radio"
          value="combined"
        />
        <label
          class="photon-label photon-label-micro photon-label-horiz-padding"
          for="implementation-radio-combined"
          title="Do not filter the stack frames"
        >
          All frames
        </label>
        <input
          class="photon-radio photon-radio-micro"
          id="implementation-radio-js"
          title="Show only the stack frames related to script execution"
          type="radio"
          value="js"
        />
        <label
          class="photon-label photon-label-micro photon-label-horiz-padding"
          for="implementation-radio-js"
          title="Show only the stack frames related to script execution"
        >
          Script
        </label>
        <input
          class="photon-radio photon-radio-micro"
          id="implementation-radio-cpp"
          title="Show only the stack frames for native code"
          type="radio"
          value="cpp"
        />
        <label
          class="photon-label photon-label-micro photon-label-horiz-padding"
          for="implementation-radio-cpp"
          title="Show only the stack frames for native code"
        >
          Native
        </label>
      </li>
    </ul>
    <div
      class="panelSearchField markerSettingsSearchField"
    >
      <label
        class="panelSearchFieldLabel"
      >
        Filter Markers: 
        <form
          class="idleSearchField panelSearchFieldInput"
        >
          <input
            class="idleSearchFieldInput photon-input"
            name="search"
            placeholder="Enter filter terms"
            required=""
            title="Only display markers that match a certain name"
            type="search"
            value=""
          />
          <input
            class="idleSearchFieldButton"
            tabindex="-1"
            type="reset"
          />
        </form>
      </label>
      <div
        class="panelSearchFieldIntroduction isHidden"
      >
        Did you know you can use the comma (,) to search using several terms?
      </div>
    </div>
    <button
      class="filterMarkersButton photon-button photon-button-ghost"
      disabled=""
      title="Marker Filters"
      type="button"
    />
    <div>
      <nav
        class="react-contextmenu markerFiltersContextMenu"
        role="menu"
        style="position: fixed; opacity: 0; pointer-events: none;"
        tabindex="-1"
      >
        <div
          aria-disabled="false"
          class="react-contextmenu-item"
          role="menuitem"
          tabindex="-1"
        >
          Drop samples outside of markers matching “
          <strong>
            ⁨⁩
          </strong>
          ”
        </div>
      </nav>
    </div>
  </div>
  <div
    class="treeView"
  >
    <div
      class="treeViewHeader"
    >
      <span
        class="treeViewHeaderColumn treeViewFixedColumn start"
        style="width: 90px;"
      >
        Start
      </span>
      <span
        class="treeViewColumnDivider isResizable"
        data-column-index="0"
      />
      <span
        class="treeViewHeaderColumn treeViewFixedColumn duration"
        style="width: 80px;"
      >
        Duration
      </span>
      <span
        class="treeViewColumnDivider isResizable"
        data-column-index="1"
      />
      <span
        class="treeViewHeaderColumn treeViewFixedColumn name"
        style="width: 150px;"
      >
        Name
      </span>
      <span
        class="treeViewColumnDivider isResizable"
        data-column-index="2"
      />
      <span
        class="treeViewHeaderColumn treeViewMainColumn details"
      >
        Details
      </span>
    </div>
    <div
      class="react-contextmenu-wrapper treeViewContextMenu"
    >
      <div
        aria-label="Call tree"
        class="treeViewBody"
        role="tree"
        tabindex="0"
      >
        <div
          class="treeViewBodyInnerWrapper"
        >
          <div
            class="treeViewBodyInner treeViewBodyInner0"
            style="height: 128px;"
          >
            <div
              class="treeViewBodyInner treeViewBodyInner0TopSpacer"
              style="height: 0px;"
            />
            <div
              class="treeViewBodyInner treeViewBodyInner0InnerChunk"
            >
              <div
                class="treeViewRow treeViewRowFixedColumns even"
                style="height: 16px; line-height: 16px;"
              >
                <span
                  class="treeViewRowColumn treeViewFixedColumn start"
                  style="width: 90px;"
                  title="0s"
                >
                  0s
                </span>
                <span
                  class="treeViewColumnDivider"
                />
                <span
                  class="treeViewRowColumn treeViewFixedColumn duration"
                  style="width: 80px;"
                  title="0s"
                >
                  0s
                </span>
                <span
                  class="treeViewColumnDivider"
                />
                <span
                  class="treeViewRowColumn treeViewFixedColumn name"
                  style="width: 150px;"
                  title="UserTiming"
                >
                  UserTiming
                </span>
                <span
                  class="treeViewColumnDivider"
                />
              </div>
              <div
                class="treeViewRow treeViewRowFixedColumns odd"
                style="height: 16px; line-height: 16px;"
              >
                <span
                  class="treeViewRowColumn treeViewFixedColumn start"
                  style="width: 90px;"
                  title="0.002s"
                >
                  0.002s
                </span>
                <span
                  class="treeViewColumnDivider"
                />
                <span
                  class="treeViewRowColumn treeViewFixedColumn duration"
                  style="width: 80px;"
                  title=""
                />
                <span
                  class="treeViewColumnDivider"
                />
                <span
                  class="treeViewRowColumn treeViewFixedColumn name"
                  style="width: 150px;"
                  title="NotifyDidPaint"
                >
                  NotifyDidPaint
                </span>
                <span
                  class="treeViewColumnDivider"
                />
              </div>
              <div
                class="treeViewRow treeViewRowFixedColumns even"
                style="height: 16px; line-height: 16px;"
              >
                <span
                  class="treeViewRowColumn treeViewFixedColumn start"
                  style="width: 90px;"
                  title="0.108s"
                >
                  0.108s
                </span>
                <span
                  class="treeViewColumnDivider"
                />
                <span
                  class="treeViewRowColumn treeViewFixedColumn duration"
                  style="width: 80px;"
                  title="unknown"
                >
                  unknown
                </span>
                <span
                  class="treeViewColumnDivider"
                />
                <span
                  class="treeViewRowColumn treeViewFixedColumn name"
                  style="width: 150px;"
                  title="IPCOut"
                >
                  IPCOut
                </span>
                <span
                  class="treeViewColumnDivider"
                />
              </div>
              <div
                class="treeViewRow treeViewRowFixedColumns odd"
                style="height: 16px; line-height: 16px;"
              >
                <span
                  class="treeViewRowColumn treeViewFixedColumn start"
                  style="width: 90px;"
                  title="0.153s"
                >
                  0.153s
                </span>
                <span
                  class="treeViewColumnDivider"
                />
                <span
                  class="treeViewRowColumn treeViewFixedColumn duration"
                  style="width: 80px;"
                  title="584.00ns"
                >
                  584.00ns
                </span>
                <span
                  class="treeViewColumnDivider"
                />
                <span
                  class="treeViewRowColumn treeViewFixedColumn name"
                  style="width: 150px;"
                  title="setTimeout"
                >
                  setTimeout
                </span>
                <span
                  class="treeViewColumnDivider"
                />
              </div>
              <div
                class="treeViewRow treeViewRowFixedColumns even"
                style="height: 16px; line-height: 16px;"
              >
                <span
                  class="treeViewRowColumn treeViewFixedColumn start"
                  style="width: 90px;"
                  title="0.153s"
                >
                  0.153s
                </span>
                <span
                  class="treeViewColumnDivider"
                />
                <span
                  class="treeViewRowColumn treeViewFixedColumn duration"
                  style="width: 80px;"
                  title="584.00ns"
                >
                  584.00ns
                </span>
                <span
                  class="treeViewColumnDivider"
                />
                <span
                  class="treeViewRowColumn treeViewFixedColumn name"
                  style="width: 150px;"
                  title="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eget magna sed magna vehicula congue id id nulla. Ut convallis, neque consequat aliquam egestas, dui urna interdum quam, id semper magna erat et nisi. Vivamus molestie quis ligula eget aliquam. Sed facilisis, turpis sed facilisis posuere, risus odio convallis velit, vitae vehicula justo risus at ipsum. Proin non porttitor neque. Vivamus fringilla ex nec iaculis cursus. Vestibulum suscipit mauris sem, vitae gravida ipsum fermentum id. Quisque pulvinar blandit ullamcorper. Donec id justo at metus scelerisque pulvinar. Proin suscipit suscipit nisi, quis tempus ipsum vulputate quis. Pellentesque sodales rutrum eros, eget pulvinar ante condimentum a. Donec accumsan, ante ut facilisis cursus, nibh quam congue eros, vitae placerat tortor magna vel lacus. Etiam odio diam, venenatis eu sollicitudin non, ultrices ut urna. Aliquam vehicula diam eu eros eleifend, ac vulputate purus faucibus."
                >
                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eget magna sed magna vehicula congue id id nulla. Ut convallis, neque consequat aliquam egestas, dui urna interdum quam, id semper magna erat et nisi. Vivamus molestie quis ligula eget aliquam. Sed facilisis, turpis sed facilisis posuere, risus odio convallis velit, vitae vehicula justo risus at ipsum. Proin non porttitor neque. Vivamus fringilla ex nec iaculis cursus. Vestibulum suscipit mauris sem, vitae gravida ipsum fermentum id. Quisque pulvinar blandit ullamcorper. Donec id justo at metus scelerisque pulvinar. Proin suscipit suscipit nisi, quis tempus ipsum vulputate quis. Pellentesque sodales rutrum eros, eget pulvinar ante condimentum a. Donec accumsan, ante ut facilisis cursus, nibh quam congue eros, vitae placerat tortor magna vel lacus. Etiam odio diam, venenatis eu sollicitudin non, ultrices ut urna. Aliquam vehicula diam eu eros eleifend, ac vulputate purus faucibus.
                </span>
                <span
                  class="treeViewColumnDivider"
                />
              </div>
              <div
                class="treeViewRow treeViewRowFixedColumns odd"
                style="height: 16px; line-height: 16px;"
              >
                <span
                  class="treeViewRowColumn treeViewFixedColumn start"
                  style="width: 90px;"
                  title="0.158s"
                >
                  0.158s
                </span>
                <span
                  class="treeViewColumnDivider"
                />
                <span
                  class="treeViewRowColumn treeViewFixedColumn duration"
                  style="width: 80px;"
                  title=""
                />
                <span
                  class="treeViewColumnDivider"
                />
                <span
                  class="treeViewRowColumn treeViewFixedColumn name"
                  style="width: 150px;"
                  title="LogMessages"
                >
                  LogMessages
                </span>
                <span
                  class="treeViewColumnDivider"
                />
              </div>
              <div
                class="treeViewRow treeViewRowFixedColumns even"
                style="height: 16px; line-height: 16px;"
              >
                <span
                  class="treeViewRowColumn treeViewFixedColumn start"
                  style="width: 90px;"
                  title="0.162s"
                >
                  0.162s
                </span>
                <span
                  class="treeViewColumnDivider"
                />
                <span
                  class="treeViewRowColumn treeViewFixedColumn duration"
                  style="width: 80px;"
                  title="1ms"
                >
                  1ms
                </span>
                <span
                  class="treeViewColumnDivider"
                />
                <span
                  class="treeViewRowColumn treeViewFixedColumn name"
                  style="width: 150px;"
                  title="FileIO"
                >
                  FileIO
                </span>
                <span
                  class="treeViewColumnDivider"
                />
              </div>
            </div>
          </div>
          <div
            class="treeViewBodyInner treeViewBodyInner1"
            style="height: 128px; min-width: 3000px;"
          >
            <div
              class="treeViewBodyInner treeViewBodyInner1TopSpacer"
              style="height: 0px;"
            />
            <div
              class="treeViewBodyInner treeViewBodyInner1InnerChunk"
            >
              <div
                aria-level="1"
                aria-selected="false"
                class="treeViewRow treeViewRowScrolledColumns even"
                id="treeViewRow-0"
                role="treeitem"
                style="height: 16px; line-height: 16px;"
              >
                <span
                  class="treeRowIndentSpacer"
                  style="width: 0px;"
                />
                <span
                  class="treeRowToggleButton collapsed leaf"
                />
                <span
                  class="treeViewRowColumn treeViewMainColumn details"
                >
                  foobar
                </span>
              </div>
              <div
                aria-level="1"
                aria-selected="false"
                class="treeViewRow treeViewRowScrolledColumns odd"
                id="treeViewRow-1"
                role="treeitem"
                style="height: 16px; line-height: 16px;"
              >
                <span
                  class="treeRowIndentSpacer"
                  style="width: 0px;"
                />
                <span
                  class="treeRowToggleButton collapsed leaf"
                />
                <span
                  class="treeViewRowColumn treeViewMainColumn details"
                />
              </div>
              <div
                aria-level="1"
                aria-selected="false"
                class="treeViewRow treeViewRowScrolledColumns even"
                id="treeViewRow-2"
                role="treeitem"
                style="height: 16px; line-height: 16px;"
              >
                <span
                  class="treeRowIndentSpacer"
                  style="width: 0px;"
                />
                <span
                  class="treeRowToggleButton collapsed leaf"
                />
                <span
                  class="treeViewRowColumn treeViewMainColumn details"
                >
                  PContent::Msg_PreferenceUpdate — sent to 2222
                </span>
              </div>
              <div
                aria-level="1"
                aria-selected="false"
                class="treeViewRow treeViewRowScrolledColumns odd"
                id="treeViewRow-3"
                role="treeitem"
                style="height: 16px; line-height: 16px;"
              >
                <span
                  class="treeRowIndentSpacer"
                  style="width: 0px;"
                />
                <span
                  class="treeRowToggleButton collapsed leaf"
                />
                <span
                  class="treeViewRowColumn treeViewMainColumn details"
                >
                  5.5
                </span>
              </div>
              <div
                aria-level="1"
                aria-selected="false"
                class="treeViewRow treeViewRowScrolledColumns even"
                id="treeViewRow-4"
                role="treeitem"
                style="height: 16px; line-height: 16px;"
              >
                <span
                  class="treeRowIndentSpacer"
                  style="width: 0px;"
                />
                <span
                  class="treeRowToggleButton collapsed leaf"
                />
                <span
                  class="treeViewRowColumn treeViewMainColumn details"
                >
                  5.5
                </span>
              </div>
              <div
                aria-level="1"
                aria-selected="false"
                class="treeViewRow treeViewRowScrolledColumns odd"
                id="treeViewRow-5"
                role="treeitem"
                style="height: 16px; line-height: 16px;"
              >
                <span
                  class="treeRowIndentSpacer"
                  style="width: 0px;"
                />
                <span
                  class="treeRowToggleButton collapsed leaf"
                />
                <span
                  class="treeViewRowColumn treeViewMainColumn details"
                >
                  (nsJarProtocol) nsJARChannel::nsJARChannel [this=0x87f1ec80]

                </span>
              </div>
              <div
                aria-level="1"
                aria-selected="false"
                class="treeViewRow treeViewRowScrolledColumns even"
                id="treeViewRow-6"
                role="treeitem"
                style="height: 16px; line-height: 16px;"
              >
                <span
                  class="treeRowIndentSpacer"
                  style="width: 0px;"
                />
                <span
                  class="treeRowToggleButton collapsed leaf"
                />
                <span
                  class="treeViewRowColumn treeViewMainColumn details"
                >
                  (PoisonIOInterposer) create/open — /foo/bar
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
